bk_ida/gccida/g2/propagate_one_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/flow.c:2101:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = (  struct rtx_def *)insn[1]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/flow.c:2128:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)insn[2]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/flow.c:2177:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v28 = ( __int64)insn[2]; 
                ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/flow.c:2186:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( j = ( __int64)insn[4]; j; j = *( _QWORD *)( j + 16) ) 
                    ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/flow.c:2266:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v37 = ( __int64)insn[2]; 
                ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/flow.c:2270:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( m = ( __int64)insn[4]; m; m = *( _QWORD *)( m + 16) ) 
                    ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/flow.c:2301:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v55 = ( rtx)insn[2]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/flow.c:2306:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v57.rtwint = ( __int64)reg_note->fld[0]; 
                       ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/flow.c:2374:64: error: too many arguments provided to function-like macro invocation
fatal_insn( "Attempt to delete prologue/epilogue insn:", insn, "flow.c", 1615, "propagate_one_insn"); 
                                                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/toplev.h:50:9: note: macro 'fatal_insn' defined here
#define fatal_insn(msgid, insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/flow.c:2374:1: error: use of undeclared identifier 'fatal_insn'; did you mean '_fatal_insn'?
fatal_insn( "Attempt to delete prologue/epilogue insn:", insn, "flow.c", 1615, "propagate_one_insn"); 
^~~~~~~~~~
_fatal_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/toplev.h:44:13: note: '_fatal_insn' declared here
extern void _fatal_insn                 PARAMS ((const char *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/flow.c:2382:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v20.rtwint = ( __int64)reg_note->fld[0]; 
                       ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/flow.c:2394:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v46.rtwint = ( __int64)v42->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/flow.c:2403:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v49 = ( _WORD *)nonnote_insn[2]; 
                ^~~~~~~~~~~~~~~
13 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/propagate_one_insn/src/obj/flow.o] Error 1
